[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros_tap"
version = "0.2.0"
description = "Zero config telemetry tap for any ROS 1 or ROS 2 robot on your network. Discover, subscribe, stream. No ROS install required."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Pablo", email = "pablo@hashingsystems.com" }]
keywords = ["ros", "ros2", "robotics", "telemetry", "monitoring", "diagnostics", "dds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "numpy>=1.24",
    "cyclonedds>=0.10.0",
]

[project.optional-dependencies]
ros1 = ["defusedxml>=0.7.0"]
s3 = ["boto3>=1.28"]
all = ["ros_tap[ros1,s3]"]

[project.urls]
Homepage = "https://github.com/publu/ros_tap"
Documentation = "https://github.com/publu/ros_tap#readme"
Issues = "https://github.com/publu/ros_tap/issues"

[project.scripts]
ros_tap = "ros_tap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
